--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,25 @@
+#Change default directory page
+DirectoryIndex index.php
 
-# DO NOT REMOVE THIS LINE AND THE LINES BELOW SSL_REDIRECT:osureplayviewer.xyz
-RewriteEngine on
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_HOST} ^osureplayviewer.xyz$
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
-# DO NOT REMOVE THIS LINE AND THE LINES ABOVE SSL_REDIRECT:osureplayviewer.xyz
+#Prevent viewing of .htaccess file
+<Files .htaccess>
+order allow,deny
+deny from all
+</Files>
 
-AddType application/x-httpd-php .bop .foo .133t
+AddType application/x-httpd-php .htm .html
 Options -Indexes
 
-# Mode maintenance
-#RewriteCond %{REMOTE_ADDR} !^195\.221\.243\.131
-#RewriteCond %{REQUEST_URI} !^/maintenance.php [NC]
-#RewriteRule .* /maintenance.php [L]
-AddType application/x-httpd-php .html .htm
+#Prevent directory listings
+#Options All -Indexes
+
+<ifModule mod_gzip.c>
+ mod_gzip_on Yes
+ mod_gzip_dechunk Yes
+ mod_gzip_item_include file \.(html?|txt|css|js|php|pl)$
+ mod_gzip_item_include mime ^application/x-javascript.*
+ mod_gzip_item_include mime ^text/.*
+ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+ mod_gzip_item_exclude mime ^image/.*
+ mod_gzip_item_include handler ^cgi-script$
+ </ifModule>
