--- a/php.ini
+++ b/php.ini
@@ -1,2 +1,5 @@
 upload_max_filesize = 10M
 post_max_size = 10M
+display_errors = on
+error_reporting = E_ALL & ~E_NOTICE & ~E_WARNING 
+zlib.output_compression = true
