--- a/php.ini
+++ b/php.ini
@@ -1,5 +1,7 @@
-upload_max_filesize = 10M
-post_max_size = 10M
-display_errors = on
-error_reporting = E_ALL & ~E_NOTICE & ~E_WARNING 
+upload_max_filesize = 200M
+
+post_max_size = 200M
+
+display_errors = 0
+error_reporting = E_ALL & ~E_NOTICE
 zlib.output_compression = true
