--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,17 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "6"
+      "phpunit/phpunit": "6",
+      "doctrine/instantiator": "1.0.5",
+      "myclabs/deep-copy": "1.7.0",
+      "phpdocumentor/reflection-common": "1.0.1",
+      "phpdocumentor/reflection-docblock": "4.3.0",
+      "phpdocumentor/type-resolver": "0.4.0",
+      "phpspec/prophecy": "1.8.0"
     },
     "require": {
-        "phpmailer/phpmailer": "^6.0",
-        "patreon/patreon": "^0.3.1"
+      "phpmailer/phpmailer": "^6.0",
+      "patreon/patreon": "^0.3.1",
+      "ext-curl": "^7.3",
+      "ext-json": "*"
     }
 }
