--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
       "phpmailer/phpmailer": "^6.0",
       "patreon/patreon": "^0.3.1",
       "ext-curl": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+      "vlucas/phpdotenv": "^3.5"
     }
 }
