Moved admins file and added DEBUG mode

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# General config
+DEBUG_VERSION = true #false for production website
+
 # FTP (Storage server)
 FTP_HOST = ""
 FTP_USER = ""
@@ -24,4 +27,7 @@ SMTP_HOST = ""
 SMTP_PORT =
 SMTP_USER = ""
 SMTP_PASS = ""
+
+# Upload key
+UPLOAD_REPLAY_KEY = "" #Any random string
 
