Added per day limit

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # General config
 DEBUG_VERSION = true #false for production website
+UPLOAD_LIMIT_PER_DAY = 5 #Number of replay upload allowed by day for one user
 
 # FTP (Storage server)
 FTP_HOST = ""
