--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ SMTP_PASS = ""
 # Upload key
 UPLOAD_REPLAY_KEY = "" #Any random string
 
+# Bugsnag - leave it empty if your are not using it
+# Only used in production mode
+BUGSNAG_API_KEY = ""
+
