--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+  "config": {
+    "platform": {
+      "php": "7.0"
+    }
+  },
   "require-dev": {
     "doctrine/instantiator": "1.0.5",
     "myclabs/deep-copy": "1.7.0",
@@ -13,6 +18,6 @@
     "vlucas/phpdotenv": "^3.5",
     "palepurple/rate-limit": "^2.0",
     "tedivm/stash": "^0.15.2",
-    "sentry/sdk": "2.0.3"
+    "sentry/sentry": "^1.10"
   }
 }
