--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "vlucas/phpdotenv": "^3.5",
     "palepurple/rate-limit": "^2.0",
     "tedivm/stash": "^0.15.2",
-    "sentry/sentry": "^1.10"
+    "sentry/sentry": "^1.10",
+    "phpseclib/phpseclib": "^2.0"
   }
 }
