Added Docker support
Pack the website into a docker

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,6 +2,10 @@ FROM php:7.3-apache
 
 MAINTAINER DevEkode
 
+# Configure PHP
+RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
+RUN docker-php-ext-install mysqli
+
 # Copy applications files to docker folder app
 COPY . /app
 
@@ -11,12 +15,10 @@ COPY .docker/vhost.conf /etc/apache2/sites-available/000-default.conf
 # Install and execute final steps
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y git zip unzip nodejs
+    apt-get install -y git zip unzip nodejs npm
 
 RUN chown -R www-data:www-data /app \
     && a2enmod rewrite
-
-RUN curl -sL https://deb.nodesource.com/setup_13.x | bash -
 
 RUN curl --silent --show-error https://getcomposer.org/installer | php \
     && cd /app \
