--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ node_modules/
 .env.test
 errors.log
 /.env
+
+.docker/ssh/host_keys/ssh_host_ed25519_key
+.docker/ssh/host_keys/ssh_host_rsa_key
+.docker/ssh/keys/id_recorder.pub
+.docker/ssh/keys/id_storage.pub
