--- a/.docker/apache/vhost.conf
+++ b/.docker/apache/vhost.conf
@@ -2,6 +2,7 @@
     DocumentRoot /app
 
     <Directory "/app">
+        Options -Indexes +FollowSymLinks
         AllowOverride all
         Require all granted
     </Directory>
