--- a/.dockerignore
+++ b/.dockerignore
@@ -1,40 +1,10 @@
-*.[mp4]
-secure/
-test2.php
-client_secret.json
-client/
-replayList/
-requestList/
-vendor
-*.osr
-*.osk
-*.ini
-README.md
-googlef02d221e2c7a486e.html
-.htaccess
-googlef02d221e2c7a486e.html
-.htaccess
-.scannerwork
-.idea
-vendor/
-node_modules/
-.env.test
-errors.log
-/.env
-
-.docker/ssh/host_keys/ssh_host_ed25519_key
-.docker/ssh/host_keys/ssh_host_rsa_key
-.docker/ssh/keys/id_recorder.pub
-.docker/ssh/keys/id_storage.pub
-!.idea
-.docker/mysql/data/*
-.docker/apache/data/*
-
+# Created by .ignore support plugin (hsz.mobi)
+### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
+../.idea/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
@@ -60,14 +30,13 @@ errors.log
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-.idea/artifacts
-.idea/compiler.xml
-.idea/jarRepositories.xml
-.idea/modules.xml
-.idea/*.iml
-.idea/modules
-*.iml
-*.ipr
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
 # CMake
 cmake-build-*/
@@ -101,3 +70,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
