--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,7 @@ errors.log
 
 .docker/ssh/host_keys/ssh_host_ed25519_key
 .docker/ssh/host_keys/ssh_host_rsa_key
-.docker/ssh/keys/id_recorder.pub
-.docker/ssh/keys/id_storage.pub
+.docker/ssh/keys/**
 !.idea
 .docker/mysql/data/*
 .docker/apache/data/*
