--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: .docker/DockerfileDev
+      dockerfile: .docker/Dockerfile
     image: osurv-docker
     restart: always
     volumes:
