--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,11 @@ services:
     image: osurv-docker
     restart: always
     volumes:
-      - "app_files:/app"
       - "./.docker/app_data/accounts:/app/accounts"
       - "./.docker/app_data/requestList:/app/requestList"
       - "./.docker/app_data/pledgers:/app/php/patreon/pledgers"
       - "./.htaccess:/app/.htaccess"
+      - "app_files:/app"
     links:
       - mysql
   mysql:
@@ -51,6 +51,10 @@ services:
       - "./.docker/ssh/host_keys/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key"
       - "./.docker/ssh/host_keys/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key"
       - "./.docker/ssh/keys/:/home/sftp/.ssh/keys/:ro"
+      - "./.docker/app_data/accounts:/home/sftp/accounts"
+      - "./.docker/app_data/requestList:/home/sftp/requestList"
+      - "./.docker/app_data/pledgers:/home/sftp/php/patreon/pledgers"
+      - "./.htaccess:/home/sftp/.htaccess"
       - "app_files:/home/sftp"
     ports:
       - "222:22"
