--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,6 +25,7 @@ services:
       - "./.docker/app_data/accounts:/app/accounts"
       - "./.docker/app_data/requestList:/app/requestList"
       - "./.docker/app_data/pledgers:/app/php/patreon/pledgers"
+      - "./.docker/app_data/client:/app/client"
       - "./.htaccess:/app/.htaccess"
       - "app_files:/app"
     links:
@@ -54,6 +55,7 @@ services:
       - "./.docker/app_data/accounts:/home/sftp/accounts"
       - "./.docker/app_data/requestList:/home/sftp/requestList"
       - "./.docker/app_data/pledgers:/home/sftp/php/patreon/pledgers"
+      - "./.docker/app_data/client:/app/client"
       - "./.htaccess:/home/sftp/.htaccess"
       - "app_files:/home/sftp"
     ports:
