Fixed sftp permissions

--- a/.docker/DockerfileDev
+++ b/.docker/DockerfileDev
@@ -68,6 +68,6 @@ RUN mkdir /app/php/patreon/pledgers
 RUN mkdir /app/uploads
 RUN mkdir /app/client
 
-RUN chown -R www-data: /app
+RUN chown -R 1001:www-data /app
 
 
