--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -52,14 +52,15 @@ services:
       - "./.docker/ssh/host_keys/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key"
       - "./.docker/ssh/host_keys/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key"
       - "./.docker/ssh/keys/:/home/sftp/.ssh/keys/:ro"
-      - "./.docker/app_data/accounts:/home/sftp/accounts"
-      - "./.docker/app_data/requestList:/home/sftp/requestList"
-      - "./.docker/app_data/pledgers:/home/sftp/php/patreon/pledgers"
-      - "./.docker/app_data/client:/app/client"
-      - "./.htaccess:/home/sftp/.htaccess"
-      - "app_files:/home/sftp"
+      - "./.docker/app_data/accounts:/home/sftp/www/accounts"
+      - "./.docker/app_data/requestList:/home/sftp/www/requestList"
+      - "./.docker/app_data/pledgers:/home/sftp/www/php/patreon/pledgers"
+      - "./.docker/app_data/client:/home/sftp/www/client"
+      - "./.htaccess:/home/sftp/www/.htaccess"
+      - "app_files:/home/sftp/www"
+      - "./.docker/ssh/startup.sh:/etc/sftp.d/startup.sh"
     ports:
       - "222:22"
-    command: sftp::33
+    command: sftp::1001:33:www
 volumes:
   app_files:
