--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,11 +55,12 @@ services:
       - "./.docker/app_data/accounts:/home/sftp/accounts"
       - "./.docker/app_data/requestList:/home/sftp/requestList"
       - "./.docker/app_data/pledgers:/home/sftp/php/patreon/pledgers"
-      - "./.docker/app_data/client:/app/client"
+      - "./.docker/app_data/client:/home/sftp/client"
       - "./.htaccess:/home/sftp/.htaccess"
       - "app_files:/home/sftp"
+      - "./.docker/ssh/startup.sh:/etc/sftp.d/startup.sh"
     ports:
       - "222:22"
-    command: sftp::33
+    command: sftp::1001:33:www
 volumes:
   app_files:
