--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,11 +52,11 @@ services:
       - "./.docker/ssh/host_keys/ssh_host_ed25519_key:/etc/ssh/ssh_host_ed25519_key"
       - "./.docker/ssh/host_keys/ssh_host_rsa_key:/etc/ssh/ssh_host_rsa_key"
       - "./.docker/ssh/keys/:/home/sftp/.ssh/keys/:ro"
-      - "./.docker/app_data/accounts:/home/sftp/accounts"
-      - "./.docker/app_data/requestList:/home/sftp/requestList"
-      - "./.docker/app_data/pledgers:/home/sftp/php/patreon/pledgers"
-      - "./.docker/app_data/client:/home/sftp/client"
-      - "./.htaccess:/home/sftp/.htaccess"
+      - "./.docker/app_data/accounts:/home/sftp/www/accounts"
+      - "./.docker/app_data/requestList:/home/sftp/www/requestList"
+      - "./.docker/app_data/pledgers:/home/sftp/www/php/patreon/pledgers"
+      - "./.docker/app_data/client:/home/sftp/www/client"
+      - "./.htaccess:/home/sftp/www/.htaccess"
       - "app_files:/home/sftp/www"
       - "./.docker/ssh/startup.sh:/etc/sftp.d/startup.sh"
     ports:
