Added REMOTE_IP Forward

--- a/.docker/apache/vhost.conf
+++ b/.docker/apache/vhost.conf
@@ -7,6 +7,10 @@
         Require all granted
     </Directory>
 
+    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" proxy
+    SetEnvIf X-Forwarded-For "^.*\..*\..*\..*" forwarded
+    CustomLog ${APACHE_LOG_DIR}/access.log combined env=!forwarded
+    CustomLog ${APACHE_LOG_DIR}/access.log proxy env=forwarded
     ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
